third_party/rust/chromium_crates_io/vendor/zerocopy-derive-0.7.35/tests/ui-msrv/late_compile_pass.stderr
warning: unused import: `zerocopy::KnownLayout`
  --> tests/ui-msrv/late_compile_pass.rs:16:5
   |
16 | use zerocopy::KnownLayout;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `NotZerocopy: FromZeroes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:28:10
   |
28 | #[derive(FromZeroes)]
   |          ^^^^^^^^^^ the trait `FromZeroes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromZeroes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:37:10
   |
37 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `FromBytes1: FromZeroes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:37:10
   |
37 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromZeroes` is not implemented for `FromBytes1`
   |
note: required by a bound in `FromBytes`
  --> $WORKSPACE/src/lib.rs
   |
   | pub unsafe trait FromBytes: FromZeroes {
   |                             ^^^^^^^^^^ required by this bound in `FromBytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:46:10
   |
46 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:56:10
   |
56 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:64:10
   |
64 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:71:10
   |
71 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
